# gcc_flags

./: .gitignore  README.md  gcc_flags.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ubuntu.yml
gcc_flags/: __init__.py  gcc_flags  gcc_flags.py
src/gcc_flags/: __init__.py  __main__.py  gcc_flags.py
tests/: test_cli.py  test_module.py
