[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcc_flags"
version = "0.1.1"
description = "Collect all possible C++ warning flags from GCC"
readme = "README.md"
authors = [{ name = "Niels Lohmann", email = "mail@nlohmann.me" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Topic :: Software Development :: Compilers"
]
dependencies = [
    "termcolor"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/nlohmann/gcc_flags"

[project.scripts]
gcc_flags = "gcc_flags.__main__:main"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = ":bookmark: bump version {old_version} -> {new_version}"
commit          = true
tag             = false
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/gcc_flags/__init__.py" = ["{version}"]
